--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,18 +1,3 @@
-header {
-      display: flex;
-      align-items: center;
-      padding: 16px;
-      background-color: #00ff00 ;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      justify-content: space-between;
-      border-radius: 5%;
-    }
-
-
-.contenedor {
-    content: normal;
-    
-}
 
 
 .logo {
@@ -21,6 +6,162 @@ header {
     align-items: center;
 }
 
- 
+/* Reset básico */
+/* * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+} */
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+header {
+  background-color: #A5A6A1;
+  color: #A5A6A1;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.barra-busqueda {
+  display: flex;
+  
+}
+
+.barra-busqueda input {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px 0 0 4px;
+  outline: none;
+  opacity: 50%;
+  background-color: #FFFFFF;
+}
+
+.barra-busqueda button {
+  padding: 8px 12px;
+  border: none;
+  background-color: #FFFFFF;
+  color: #FFFFFF;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  opacity: 50%;
+}
+
+.barra-busqueda button:hover {
+  background-color: #FFFFFF;
+  opacity: 50%;
+}
 
  
+ .button-toggle {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 2rem;
+      cursor: pointer;
+      color: #3E2A35;
+      
+}
+
+ .button-toggle {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 2rem;
+      cursor: pointer;
+      color: #3E2A35;
+      }
+    .submenu-toggle {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 2rem;
+      cursor: pointer;
+      color: #A5A6A1;
+      }
+      .menu2 {
+        display: none;
+      }
+      .menu2 a {
+        text-decoration: none;
+        color: inherit;
+      }
+@media screen and (max-width: 768px) {
+  .boton-logo {
+   margin: 20px;
+  }
+  .button-toggle {
+    display: block;
+  }
+  .submenu-toggle {
+    display: block;
+  }
+  .menu {
+    display: none;
+    flex-direction: column;
+    background: #A5A6A1;
+    position: absolute;
+    top: 80px;
+    left: 50;
+    width: 100%;
+    max-width: 45%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px ;
+    
+    left: 0;
+    z-index: 9999;
+    
+  }
+  .menu a {
+    display: block;
+    padding: 10px;
+    color: #A5A6A1;
+    opacity: 50;
+  }
+ 
+  .menu.open {
+    display: flex;
+  }
+    .menu2 {
+    display: none;
+    flex-direction: column;
+    background: #A5A6A1;
+    position: relative;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    max-width: 95%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 0;
+    border-radius: 10px 0px 0px 10px;
+    right: 0;
+    left: 0;
+  }
+  .menu2 a {
+    display: block;
+    border-bottom: #A5A6A1 solid;
+  }
+
+  .menu2.open {
+    display: flex;
+  }
+}
+ 
+.boton2 {
+      background-color: #ffffff20; /* fondo blanco semitransparente */
+  border: 1px solid #ffffff40;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 8px;
+  cursor: pointer;
+  backdrop-filter: blur(4px); /* efecto de fondo difuminado */
+  transition: all 0.3s ease;
+
+}
