Main page created

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,18 +1,15 @@
-
-
 footer {
     background: #717568;
-    color: white;
+    color: #F2F2F2;
     text-align: center;
-    padding: 1rem 0;
-    position: fixed;
+    padding: 1rem;
     width: 100%;
     bottom: 0;
-    font-family: red hat text; sans serif;
+    font-family: Red Hat Text; Sans Serif;
 }
 
 footer a {
-  color: white;
+  color: #F2F2F2;
   text-decoration: none;
   margin: 0 1rem;
 }
