--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -3,6 +3,9 @@
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     gap: 15px;
     margin-top: 20px;
+    padding: 20px;
+
+
   }
   .productShow {
     background: white;
