corrección de tipografia

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,7 +5,7 @@ footer {
     padding: 1rem;
     width: 100%;
     bottom: 0;
-    font-family:"Red Hat Text"; Sans-Serif;
+    font-family: Red Hat Text, Sans-Serif;
     
 }
 
