--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -10,6 +10,9 @@
 body, html {
   height: 100%;
   font-family: sans-serif;
+  padding-top: 80px;
+  padding-bottom: 60px;
+  box-sizing: border-box;
 }
 
 /* VIDEO */
