--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,7 +6,9 @@ footer {
     width: 100%;
     bottom: 0;
     font-family: Red Hat Text, Sans-Serif;
-    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 footer a {
