--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,4 +1,4 @@
-* {
+** {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,19 +10,13 @@ body {
 
 header {
   background-color: rgba(165, 166, 161, 1); /* Opaco inicialmente */
-  color: #3e2a35;
+  color: #3E2A35;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  /* campio Yely */
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /*  */
   z-index: 1000;
-  transition: background-color 0.4s ease, backdrop-filter 0.4s ease,
-    padding 0.4s ease;
+  transition: background-color 0.4s ease, backdrop-filter 0.4s ease, padding 0.4s ease;
 }
 
 .nav {
@@ -54,7 +48,7 @@ header.scrolled .logo {
   font-size: 1.75rem;
   cursor: pointer;
   user-select: none;
-  color: #3e2a35;
+  color: #3E2A35;
   margin-right: 0.5rem;
 }
 
@@ -96,7 +90,7 @@ header.scrolled .logo {
 }
 
 .menu li a {
-  color: #3e2a35;
+  color: #3E2A35;
   text-decoration: none;
   font-weight: 600;
   font-size: 1rem;
@@ -106,7 +100,7 @@ header.scrolled .logo {
 }
 
 .menu li a:hover {
-  background-color: #a5a6a1;
+  background-color: #A5A6A1;
   color: #fff;
 }
 
