--- a/src/styles/productView.css
+++ b/src/styles/productView.css
@@ -21,6 +21,7 @@ main {
   gap: 24px;
   min-width: 350px;
   max-width: 420px;
+  padding: 50px;
 }
 #grid-images-layout img {
   width: 180px;
@@ -39,6 +40,7 @@ main {
   gap: 18px;
   min-width: 320px;
   max-width: 480px;
+  padding: 50px;
 }
 #product-name {
   font-size: 2rem;
@@ -76,7 +78,7 @@ main {
 .add-to-favs-btn {
   margin-top: 8px;
   padding: 10px 28px;
-  background: #4c2c39;
+  background: rgba(120, 121, 117, 0.8);
   color: #fff;
   border: none;
   border-radius: 6px;
@@ -125,6 +127,19 @@ main,
 #product-detail-layout h4 {
   color: #222 !important;
 }
+
+.add-to-favs-btn2 {
+  margin-top: 8px;
+  padding: 10px 28px;
+  background: #4c2c39;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  font-weight: 600;
+}
+
 
 /* Адаптивність */
 @media (max-width: 900px) {
