--- a/src/styles/productView.css
+++ b/src/styles/productView.css
@@ -2,7 +2,7 @@ html, body {
   overflow-x: hidden;
   box-sizing: border-box;
 }
-main {
+
 .product-page main {
   display: flex;
   flex-wrap: wrap;
@@ -10,6 +10,7 @@ main {
   padding: 32px 16px;
   justify-content: center;
 }
+
 
 /* Estilos solo dentro de .product-page */
 .product-page .product-main-layout {
@@ -41,6 +42,7 @@ main {
   gap: 18px;
   min-width: 320px;
   max-width: 480px;
+  
 }
 #product-name {
   font-size: 2rem;
@@ -49,6 +51,7 @@ main {
   margin-bottom: 8px;
 }
 .price-block {
+  
   display: flex;
   align-items: baseline;
   gap: 18px;
@@ -57,7 +60,7 @@ main {
 }
 .old-price {
   text-decoration: line-through;
-  color: #888;
+  color: black;
   font-size: 1.1rem;
 }
 .discount {
@@ -67,13 +70,15 @@ main {
 }
 .price-label {
   font-size: 1rem;
-  color: #222;
+  color: black;
   font-weight: 600;
   margin-left: 8px;
 }
 .product-description {
+  color: black;
   font-size: 1.3rem;
   margin-bottom: 12px;
+
 }
 .add-to-favs-btn {
   margin-top: 8px;
@@ -157,8 +162,10 @@ main {
   gap: 16px;
 }
 
-h3,
-p,
-.product-description {
+.product-description h3,p {
   color: #222;
+}
+#precio-actual {
+  color: black;
+  font-weight: bold;
 }
